<resources>
    <string name="app_name">Color My Views</string>
    <string name="box_two">Box Two</string>
    <string name="box_one">Box One</string>
    <string name="box_five">Box Five</string>
    <string name="box_four">Box Four</string>
    <string name="box_three">Box Three</string>
    <string name="tab_screen_and_boxes">Tab Screen and Buttons</string>
    <string name="how_to_play">How to play?</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
</resources>